test/corpus/literals.txt
================================================================================
Identifier capitalized
================================================================================
test

    SBWatch2
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (identifier))))

================================================================================
Identifier
================================================================================
test

    abc123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (identifier))))

================================================================================
String
================================================================================
test

    'abc def'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (string))))

================================================================================
Multiline String
================================================================================
test

    'abc
    def'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (string))))

================================================================================
Quotes in String
================================================================================
test

    '"' "a" + '"'

--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (binary_message
        (string)
        (comment)
        (binary_operator)
        (string)))))

================================================================================
Escaped String
================================================================================
test

    'abc '' abc '' def'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (string))))

================================================================================
Empty String
================================================================================
test

    ''
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (string))))

================================================================================
Number
================================================================================
test

    123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (number))))

================================================================================
Number with Base
================================================================================
test

    12r123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (number))))

================================================================================
Negative Number
================================================================================
test

    -2.3
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (number))))

================================================================================
Negative Integer
================================================================================
test

    -2
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (number))))

================================================================================
Number with Decimal
================================================================================
test

    2.3.
    2.4
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (number))
    (statement
      (number))))

================================================================================
Symbol
================================================================================
test

    #abc123
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (symbol))))

================================================================================
Binary Symbol
================================================================================
test

    #++-
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (symbol))))

================================================================================
Quoted Symbol
================================================================================
test

    #'abc123'
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (symbol))))

================================================================================
Empty Symbol
================================================================================
test

    #''
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (symbol))))

================================================================================
Character
================================================================================
test

    $a
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (character))))

================================================================================
Space Character
================================================================================
test

    $ 
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (character))))

================================================================================
Dollar Character
================================================================================
test

    $$
--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (character))))

================================================================================
Return Character
================================================================================
test

    $

--------------------------------------------------------------------------------

(source
  (method
    (unary_selector
      (unary_identifier))
    (statement
      (character))))
